@@ -1,281 +1,369 @@
-/*
- *    sora-editor - the awesome code editor for Android
- *    https://github.com/Rosemoe/sora-editor
- *    Copyright (C) 2020-2022  Rosemoe
- *
- *     This library is free software; you can redistribute it and/or
- *     modify it under the terms of the GNU Lesser General Public
- *     License as published by the Free Software Foundation; either
- *     version 2.1 of the License, or (at your option) any later version.
- *
- *     This library is distributed in the hope that it will be useful,
- *     but WITHOUT ANY WARRANTY; without even the implied warranty of
- *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- *     Lesser General Public License for more details.
- *
- *     You should have received a copy of the GNU Lesser General Public
- *     License along with this library; if not, write to the Free Software
- *     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301
- *     USA
- *
- *     Please contact Rosemoe by email 2073412493@qq.com if you need
- *     additional information or have any questions
+/**
+ * Copyright (c) 2015-2017 Angelo ZERR.
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ * <p>
+ * SPDX-License-Identifier: EPL-2.0
+ * <p>
+ * Initial code from https://github.com/microsoft/vscode-textmate/
+ * Initial copyright Copyright (C) Microsoft Corporation. All rights reserved.
+ * Initial license: MIT
+ * <p>
+ * Contributors:
+ * - Microsoft Corporation: Initial code, written in TypeScript, licensed under MIT license
+ * - Angelo Zerr <angelo.zerr@gmail.com> - translation and adaptation to Java
  */
 package org.eclipse.tm4e.core.internal.grammar;
 
-import org.eclipse.tm4e.core.grammar.GrammarHelper;
-import org.eclipse.tm4e.core.grammar.StackElement;
-import org.eclipse.tm4e.core.internal.matcher.IMatchInjectionsResult;
-import org.eclipse.tm4e.core.internal.matcher.IMatchResult;
-import org.eclipse.tm4e.core.internal.oniguruma.IOnigCaptureIndex;
-import org.eclipse.tm4e.core.internal.oniguruma.IOnigNextMatchResult;
-import org.eclipse.tm4e.core.internal.oniguruma.OnigString;
 
+import static org.eclipse.tm4e.core.internal.utils.NullSafetyHelper.*;
+
+
+import java.time.Duration;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.logging.Logger;
 
-import org.eclipse.tm4e.core.grammar.Injection;
+import org.eclipse.jdt.annotation.NonNull;
+import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
+import org.eclipse.tm4e.core.internal.oniguruma.OnigCaptureIndex;
+import org.eclipse.tm4e.core.internal.oniguruma.OnigNextMatchResult;
+import org.eclipse.tm4e.core.internal.oniguruma.OnigString;
 import org.eclipse.tm4e.core.internal.rule.BeginEndRule;
 import org.eclipse.tm4e.core.internal.rule.BeginWhileRule;
 import org.eclipse.tm4e.core.internal.rule.CaptureRule;
-import org.eclipse.tm4e.core.internal.rule.ICompiledRule;
+import org.eclipse.tm4e.core.internal.rule.CompiledRule;
 import org.eclipse.tm4e.core.internal.rule.MatchRule;
 import org.eclipse.tm4e.core.internal.rule.Rule;
+import org.eclipse.tm4e.core.internal.rule.RuleId;
 
-class LineTokenizer {
+import io.github.rosemoe.sora.util.Logger;
 
-    private static final Logger LOGGER = Logger.getLogger(LineTokenizer.class.getName());
+/**
+ * @see <a href=
+ * "https://github.com/microsoft/vscode-textmate/blob/e8d1fc5d04b2fc91384c7a895f6c9ff296a38ac8/src/tokenizeString.ts">
+ * github.com/microsoft/vscode-textmate/blob/main/src/tokenizeString.ts</a>
+ */
+final class LineTokenizer {
+
+    private static final Logger LOGGER = Logger.instance(LineTokenizer.class.getName());
+
+    private static class MatchResult {
+        final OnigCaptureIndex[] captureIndices;
+        final RuleId matchedRuleId;
+
+        MatchResult(final RuleId matchedRuleId, final OnigCaptureIndex[] captureIndices) {
+            this.matchedRuleId = matchedRuleId;
+            this.captureIndices = captureIndices;
+        }
+    }
+
+    private static final class MatchInjectionsResult extends MatchResult {
+        boolean isPriorityMatch;
+
+        MatchInjectionsResult(final RuleId matchedRuleId, final OnigCaptureIndex[] captureIndices,
+                              final boolean isPriorityMatch) {
+            super(matchedRuleId, captureIndices);
+            this.isPriorityMatch = isPriorityMatch;
+        }
+    }
+
+
+    @NonNullByDefault({})
+    private static class WhileCheckResult {
+        StateStack stack;
+        int linePos;
+        int anchorPosition;
+        boolean isFirstLine;
+
+        WhileCheckResult(
+                @NonNull StateStack stack,
+                int linePos,
+                int anchorPosition,
+                boolean isFirstLine) {
+            this.stack = stack;
+            this.linePos = linePos;
+            this.anchorPosition = anchorPosition;
+            this.isFirstLine = isFirstLine;
+        }
+    }
+
+    static final class TokenizeStringResult {
+        public final StateStack stack;
+        public final boolean stoppedEarly;
+
+        public TokenizeStringResult(final StateStack stack, final boolean stoppedEarly) {
+            this.stack = stack;
+            this.stoppedEarly = stoppedEarly;
+        }
+    }
+
     private final Grammar grammar;
     private final OnigString lineText;
-    private final LineTokens lineTokens;
-    private final int lineLength;
     private boolean isFirstLine;
     private int linePos;
-    private StackElement stack;
+    private StateStack stack;
+    private final LineTokens lineTokens;
     private int anchorPosition = -1;
     private boolean stop;
-    public LineTokenizer(Grammar grammar, OnigString lineText, boolean isFirstLine, int linePos, StackElement stack,
-                         LineTokens lineTokens) {
+
+    private LineTokenizer(final Grammar grammar, final OnigString lineText, final boolean isFirstLine,
+                          final int linePos, final StateStack stack, final LineTokens lineTokens) {
         this.grammar = grammar;
         this.lineText = lineText;
-        this.lineLength = lineText.utf8_value.length;
         this.isFirstLine = isFirstLine;
         this.linePos = linePos;
         this.stack = stack;
         this.lineTokens = lineTokens;
     }
 
-    public static StackElement tokenizeString(Grammar grammar, OnigString lineText, boolean isFirstLine, int linePos,
-                                              StackElement stack, LineTokens lineTokens) {
-        return new LineTokenizer(grammar, lineText, isFirstLine, linePos, stack, lineTokens).scan();
-    }
-
-    public StackElement scan() {
+    private TokenizeStringResult scan(final boolean checkWhileConditions, final long timeLimit) {
         stop = false;
 
-        WhileCheckResult whileCheckResult = checkWhileConditions(grammar, lineText, isFirstLine, linePos, stack,
-                lineTokens);
-        stack = whileCheckResult.stack;
-        linePos = whileCheckResult.linePos;
-        isFirstLine = whileCheckResult.isFirstLine;
-        anchorPosition = whileCheckResult.anchorPosition;
+        if (checkWhileConditions) {
+            final var whileCheckResult = checkWhileConditions(grammar, lineText, isFirstLine, linePos, stack,
+                    lineTokens);
+            stack = whileCheckResult.stack;
+            linePos = whileCheckResult.linePos;
+            isFirstLine = whileCheckResult.isFirstLine;
+            anchorPosition = whileCheckResult.anchorPosition;
+        }
 
+        final var startTime = System.currentTimeMillis();
         while (!stop) {
+            if (timeLimit > 0) {
+                final var elapsedTime = System.currentTimeMillis() - startTime;
+                if (elapsedTime > timeLimit) {
+                    return new TokenizeStringResult(stack, true);
+                }
+            }
             scanNext(); // potentially modifies linePos && anchorPosition
         }
 
-        return stack;
+        return new TokenizeStringResult(stack, false);
     }
 
     private void scanNext() {
-        //LOGGER.finest("@@scanNext: |" + lineText.string.replaceAll("\n", "\\n").substring(linePos) + '|');
+        LOGGER.d("@@scanNext: |" + lineText.content.replace("\n", "\\n").substring(linePos) + '|');
 
-        IMatchResult r = matchRuleOrInjections(grammar, lineText, isFirstLine, linePos, stack, anchorPosition);
+        final MatchResult r = matchRuleOrInjections(grammar, lineText, isFirstLine, linePos, stack, anchorPosition);
 
         if (r == null) {
-            LOGGER.finest(" no more matches.");
+            LOGGER.d(" no more matches.");
             // No match
-            lineTokens.produce(stack, lineLength);
+            lineTokens.produce(stack, lineText.bytesCount);
             stop = true;
             return;
         }
 
-        IOnigCaptureIndex[] captureIndices = r.getCaptureIndices();
-        int matchedRuleId = r.getMatchedRuleId();
+        final OnigCaptureIndex[] captureIndices = r.captureIndices;
 
-        boolean hasAdvanced = (captureIndices != null && captureIndices.length > 0)
-                ? (captureIndices[0].getEnd() > linePos)
-                : false;
+        final RuleId matchedRuleId = r.matchedRuleId;
 
-        if (matchedRuleId == -1) {
+        final boolean hasAdvanced = captureIndices.length > 0 && captureIndices[0].end > linePos;
+
+        if (matchedRuleId.equals(RuleId.END_RULE)) {
             // We matched the `end` for this rule => pop it
-            BeginEndRule poppedRule = (BeginEndRule) stack.getRule(grammar);
+            final BeginEndRule poppedRule = (BeginEndRule) stack.getRule(grammar);
 
             /*
              * if (logger.isEnabled()) { logger.log("  popping " + poppedRule.debugName +
              * " - " + poppedRule.debugEndRegExp); }
              */
 
-            lineTokens.produce(stack, captureIndices[0].getStart());
-            stack = stack.setContentNameScopesList(stack.nameScopesList);
+            lineTokens.produce(stack, captureIndices[0].start);
+            stack = stack.withContentNameScopesList(stack.nameScopesList);
             handleCaptures(grammar, lineText, isFirstLine, stack, lineTokens, poppedRule.endCaptures, captureIndices);
-            lineTokens.produce(stack, captureIndices[0].getEnd());
+            lineTokens.produce(stack, captureIndices[0].end);
 
             // pop
-            StackElement popped = stack;
-            stack = stack.pop();
+            final var popped = stack;
+            stack = castNonNull(stack.pop());
+            anchorPosition = popped.getAnchorPos();
 
             if (!hasAdvanced && popped.getEnterPos() == linePos) {
                 // Grammar pushed & popped a rule without advancing
-                LOGGER.info("[1] - Grammar is in an endless loop - Grammar pushed & popped a rule without advancing");
-                // See https://github.com/Microsoft/vscode-textmate/issues/12
+                LOGGER.d(
+                        "[1] - Grammar is in an endless loop - Grammar pushed & popped a rule without advancing");
+                // See https://github.com/microsoft/vscode-textmate/issues/12
                 // Let's assume this was a mistake by the grammar author and the
                 // intent was to continue in this state
                 stack = popped;
 
-                lineTokens.produce(stack, lineLength);
+                lineTokens.produce(stack, lineText.bytesCount);
                 stop = true;
                 return;
             }
-        } else if (captureIndices != null && captureIndices.length > 0) {
+        } else if (captureIndices.length > 0) {
             // We matched a rule!
-            Rule rule = grammar.getRule(matchedRuleId);
+            final Rule rule = grammar.getRule(matchedRuleId);
 
-            lineTokens.produce(stack, captureIndices[0].getStart());
+            lineTokens.produce(stack, captureIndices[0].start);
 
-            StackElement beforePush = stack;
+            final StateStack beforePush = stack;
             // push it on the stack rule
-            String scopeName = rule.getName(lineText.string, captureIndices);
-            ScopeListElement nameScopesList = stack.contentNameScopesList.push(grammar, scopeName);
-            stack = stack.push(matchedRuleId, linePos, null, nameScopesList, nameScopesList);
+            final var scopeName = rule.getName(lineText.content, captureIndices);
+            final var nameScopesList = stack.contentNameScopesList.pushAttributed(
+                    scopeName,
+                    grammar);
+            stack = stack.push(
+                    matchedRuleId,
+                    linePos,
+                    anchorPosition,
+                    captureIndices[0].end == lineText.bytesCount,
+                    null,
+                    nameScopesList,
+                    nameScopesList);
 
             if (rule instanceof BeginEndRule) {
-                BeginEndRule pushedRule = (BeginEndRule) rule;
+                var pushedRule = (BeginEndRule) rule;
 
-                // if (IN_DEBUG_MODE) {
-                // console.log(' pushing ' + pushedRule.debugName + ' - ' +
-                // pushedRule.debugBeginRegExp);
-                // }
-
-                handleCaptures(grammar, lineText, isFirstLine, stack, lineTokens, pushedRule.beginCaptures,
+                handleCaptures(
+                        grammar,
+                        lineText,
+                        isFirstLine,
+                        stack,
+                        lineTokens,
+                        pushedRule.beginCaptures,
                         captureIndices);
-                lineTokens.produce(stack, captureIndices[0].getEnd());
-                anchorPosition = captureIndices[0].getEnd();
+                lineTokens.produce(stack, captureIndices[0].end);
+                anchorPosition = captureIndices[0].end;
 
-                String contentName = pushedRule.getContentName(lineText.string, captureIndices);
-                ScopeListElement contentNameScopesList = nameScopesList.push(grammar, contentName);
-                stack = stack.setContentNameScopesList(contentNameScopesList);
+                final var contentName = pushedRule.getContentName(
+                        lineText.content,
+                        captureIndices);
+                final var contentNameScopesList = nameScopesList.pushAttributed(
+                        contentName,
+                        grammar);
+                stack = stack.withContentNameScopesList(contentNameScopesList);
 
                 if (pushedRule.endHasBackReferences) {
-                    stack = stack.setEndRule(
-                            pushedRule.getEndWithResolvedBackReferences(lineText.string, captureIndices));
+                    stack = stack.withEndRule(
+                            pushedRule.getEndWithResolvedBackReferences(
+                                    lineText.content,
+                                    captureIndices));
                 }
 
                 if (!hasAdvanced && beforePush.hasSameRuleAs(stack)) {
                     // Grammar pushed the same rule without advancing
-                    LOGGER.info("[2] - Grammar is in an endless loop - Grammar pushed the same rule without advancing");
-                    stack = stack.pop();
-                    lineTokens.produce(stack, lineLength);
+                    LOGGER.d(
+                            "[2] - Grammar is in an endless loop - Grammar pushed the same rule without advancing");
+                    stack = castNonNull(stack.pop());
+                    lineTokens.produce(stack, lineText.bytesCount);
                     stop = true;
                     return;
                 }
             } else if (rule instanceof BeginWhileRule) {
-                BeginWhileRule pushedRule = (BeginWhileRule) rule;
-                // if (IN_DEBUG_MODE) {
-                // console.log(' pushing ' + pushedRule.debugName);
+                // if (DebugFlags.InDebugMode) {
+                // console.log(" pushing " + pushedRule.debugName);
                 // }
 
-                handleCaptures(grammar, lineText, isFirstLine, stack, lineTokens, pushedRule.beginCaptures,
-                        captureIndices);
-                lineTokens.produce(stack, captureIndices[0].getEnd());
-                anchorPosition = captureIndices[0].getEnd();
 
-                String contentName = pushedRule.getContentName(lineText.string, captureIndices);
-                ScopeListElement contentNameScopesList = nameScopesList.push(grammar, contentName);
-                stack = stack.setContentNameScopesList(contentNameScopesList);
+                var pushedRule = (BeginWhileRule) rule;
+
+                handleCaptures(
+                        grammar,
+                        lineText,
+                        isFirstLine,
+                        stack,
+                        lineTokens,
+                        pushedRule.beginCaptures,
+                        captureIndices);
+                lineTokens.produce(stack, captureIndices[0].end);
+                anchorPosition = captureIndices[0].end;
+                final var contentName = pushedRule.getContentName(
+                        lineText.content,
+                        captureIndices);
+                final var contentNameScopesList = nameScopesList.pushAttributed(
+                        contentName,
+                        grammar);
+                stack = stack.withContentNameScopesList(contentNameScopesList);
 
                 if (pushedRule.whileHasBackReferences) {
-                    stack = stack.setEndRule(
-                            pushedRule.getWhileWithResolvedBackReferences(lineText.string, captureIndices));
+                    stack = stack.withEndRule(
+                            pushedRule.getWhileWithResolvedBackReferences(
+                                    lineText.content,
+                                    captureIndices));
                 }
 
                 if (!hasAdvanced && beforePush.hasSameRuleAs(stack)) {
                     // Grammar pushed the same rule without advancing
-                    LOGGER.info("[3] - Grammar is in an endless loop - Grammar pushed the same rule without advancing");
-                    stack = stack.pop();
-                    lineTokens.produce(stack, lineLength);
+                    LOGGER.d("[3] - Grammar is in an endless loop - Grammar pushed the same rule without advancing");
+                    stack = castNonNull(stack.pop());
+                    lineTokens.produce(stack, lineText.bytesCount);
                     stop = true;
                     return;
                 }
             } else {
-                MatchRule matchingRule = (MatchRule) rule;
-                // if (IN_DEBUG_MODE) {
+                final MatchRule matchingRule = (MatchRule) rule;
+                // if (DebugFlags.InDebugMode) {
                 // console.log(' matched ' + matchingRule.debugName + ' - ' +
                 // matchingRule.debugMatchRegExp);
                 // }
 
-                handleCaptures(grammar, lineText, isFirstLine, stack, lineTokens, matchingRule.captures,
+                handleCaptures(
+                        grammar,
+                        lineText,
+                        isFirstLine,
+                        stack,
+                        lineTokens,
+                        matchingRule.captures,
                         captureIndices);
-                lineTokens.produce(stack, captureIndices[0].getEnd());
+                lineTokens.produce(stack, captureIndices[0].end);
 
                 // pop rule immediately since it is a MatchRule
-                stack = stack.pop();
+                stack = castNonNull(stack.pop());
 
                 if (!hasAdvanced) {
                     // Grammar is not advancing, nor is it pushing/popping
-                    LOGGER.info("[4] - Grammar is in an endless loop - Grammar is not advancing, nor is it pushing/popping");
+                    LOGGER.d("[4] - Grammar is in an endless loop - Grammar is not advancing, nor is it pushing/popping");
                     stack = stack.safePop();
-                    lineTokens.produce(stack, lineLength);
+                    lineTokens.produce(stack, lineText.bytesCount);
                     stop = true;
                     return;
                 }
             }
         }
 
-        if (captureIndices != null && captureIndices.length > 0 && captureIndices[0].getEnd() > linePos) {
+        if (captureIndices.length > 0 && captureIndices[0].end > linePos) {
             // Advance stream
-            linePos = captureIndices[0].getEnd();
+            linePos = captureIndices[0].end;
             isFirstLine = false;
         }
     }
 
-    private IMatchResult matchRule(Grammar grammar, OnigString lineText, boolean isFirstLine, final int linePos,
-                                   StackElement stack, int anchorPosition) {
-        Rule rule = stack.getRule(grammar);
-        final ICompiledRule ruleScanner = rule.compile(grammar, stack.endRule, isFirstLine, linePos == anchorPosition);
-        final IOnigNextMatchResult r = ruleScanner.scanner.findNextMatchSync(lineText, linePos);
+    @Nullable
+    private MatchResult matchRule(final Grammar grammar, final OnigString lineText, final boolean isFirstLine,
+                                  final int linePos, final StateStack stack, final int anchorPosition) {
+        final var rule = stack.getRule(grammar);
+        final var ruleScanner = rule.compileAG(grammar, stack.endRule, isFirstLine, linePos == anchorPosition);
+
+        final OnigNextMatchResult r = ruleScanner.scanner.findNextMatchSync(lineText, linePos);
 
         if (r != null) {
-            return new IMatchResult() {
-
-                @Override
-                public int getMatchedRuleId() {
-                    return ruleScanner.rules[r.getIndex()];
-                }
-
-                @Override
-                public IOnigCaptureIndex[] getCaptureIndices() {
-                    return r.getCaptureIndices();
-                }
-            };
+            return new MatchResult(ruleScanner.rules[r.getIndex()], r.getCaptureIndices());
         }
         return null;
     }
 
-    private IMatchResult matchRuleOrInjections(Grammar grammar, OnigString lineText, boolean isFirstLine,
-                                               final int linePos, StackElement stack, int anchorPosition) {
+    @Nullable
+    private MatchResult matchRuleOrInjections(final Grammar grammar, final OnigString lineText,
+                                              final boolean isFirstLine,
+                                              final int linePos, final StateStack stack, final int anchorPosition) {
         // Look for normal grammar rule
-        IMatchResult matchResult = matchRule(grammar, lineText, isFirstLine, linePos, stack, anchorPosition);
+        final MatchResult matchResult = matchRule(grammar, lineText, isFirstLine, linePos, stack, anchorPosition);
 
         // Look for injected rules
-        List<Injection> injections = grammar.getInjections();
-        if (injections.size() == 0) {
+        final List<Injection> injections = grammar.getInjections();
+        if (injections.isEmpty()) {
             // No injections whatsoever => early return
             return matchResult;
         }
 
-        IMatchInjectionsResult injectionResult = matchInjections(injections, grammar, lineText, isFirstLine, linePos,
+        final MatchInjectionsResult injectionResult = matchInjections(injections, grammar, lineText, isFirstLine,
+                linePos,
                 stack, anchorPosition);
         if (injectionResult == null) {
             // No injections matched => early return
@@ -288,11 +376,11 @@ class LineTokenizer {
         }
 
         // Decide if `matchResult` or `injectionResult` should win
-        int matchResultScore = matchResult.getCaptureIndices()[0].getStart();
-        int injectionResultScore = injectionResult.getCaptureIndices()[0].getStart();
+        final int matchResultScore = matchResult.captureIndices[0].start;
+        final int injectionResultScore = injectionResult.captureIndices[0].start;
 
         if (injectionResultScore < matchResultScore
-                || (injectionResult.isPriorityMatch() && injectionResultScore == matchResultScore)) {
+                || injectionResult.isPriorityMatch && injectionResultScore == matchResultScore) {
             // injection won!
             return injectionResult;
         }
@@ -300,35 +388,41 @@ class LineTokenizer {
         return matchResult;
     }
 
-    private IMatchInjectionsResult matchInjections(List<Injection> injections, Grammar grammar, OnigString lineText,
-                                                   boolean isFirstLine, int linePos, StackElement stack, int anchorPosition) {
+    @Nullable
+    private MatchInjectionsResult matchInjections(final List<Injection> injections, final Grammar grammar,
+                                                  final OnigString lineText, final boolean isFirstLine, final int linePos, final StateStack stack,
+                                                  final int anchorPosition) {
+
         // The lower the better
-        int bestMatchRating = Integer.MAX_VALUE;
-        IOnigCaptureIndex[] bestMatchCaptureIndices = null;
-        int bestMatchRuleId = -1;
-        int bestMatchResultPriority = 0;
+        var bestMatchRating = Integer.MAX_VALUE;
+        OnigCaptureIndex[] bestMatchCaptureIndices = null;
+        var bestMatchRuleId = RuleId.END_RULE;
+        var bestMatchResultPriority = 0;
 
-        List<String> scopes = stack.contentNameScopesList.generateScopes();
+        final var scopes = stack.contentNameScopesList.getScopeNames();
 
-        for (Injection injection : injections) {
-            if (!injection.match(scopes)) {
+        for (int i = 0, len = injections.size(); i < len; i++) {
+            final var injection = injections.get(i);
+            if (!injection.matches(scopes)) {
                 // injection selector doesn't match stack
                 continue;
             }
 
-            ICompiledRule ruleScanner = grammar.getRule(injection.ruleId).compile(grammar, null, isFirstLine,
-                    linePos == anchorPosition);
-            IOnigNextMatchResult matchResult = ruleScanner.scanner.findNextMatchSync(lineText, linePos);
-
+            final var rule = grammar.getRule(injection.ruleId);
+            final var ruleScanner = rule.compileAG(grammar, null, isFirstLine, linePos == anchorPosition);
+            final var matchResult = ruleScanner.scanner.findNextMatchSync(lineText, linePos);
             if (matchResult == null) {
                 continue;
             }
 
-            int matchRating = matchResult.getCaptureIndices()[0].getStart();
-
+          /*  if (LOGGER.isLoggable(Level.TRACE)) {
+                LOGGER.log(Level.TRACE, "  matched injection: " + injection.debugSelector);
+                LOGGER.log(Level.TRACE, debugCompiledRuleToString(ruleScanner));
+            }
+*/
+            final int matchRating = matchResult.getCaptureIndices()[0].start;
             if (matchRating > bestMatchRating) {
-                // Injections are sorted by priority, so the previous injection had a better or
-                // equal priority
+                // Injections are sorted by priority, so the previous injection had a better or equal priority
                 continue;
             }
 
@@ -344,186 +438,172 @@ class LineTokenizer {
         }
 
         if (bestMatchCaptureIndices != null) {
-            final int matchedRuleId = bestMatchRuleId;
-            final IOnigCaptureIndex[] matchCaptureIndices = bestMatchCaptureIndices;
-            final boolean matchResultPriority = bestMatchResultPriority == -1;
-            return new IMatchInjectionsResult() {
-
-                @Override
-                public int getMatchedRuleId() {
-                    return matchedRuleId;
-                }
-
-                @Override
-                public IOnigCaptureIndex[] getCaptureIndices() {
-                    return matchCaptureIndices;
-                }
-
-                @Override
-                public boolean isPriorityMatch() {
-                    return matchResultPriority;
-                }
-            };
+            return new MatchInjectionsResult(
+                    bestMatchRuleId,
+                    bestMatchCaptureIndices,
+                    bestMatchResultPriority == -1);
         }
 
         return null;
     }
 
-    private void handleCaptures(Grammar grammar, OnigString lineText, boolean isFirstLine, StackElement stack,
-                                LineTokens lineTokens, List<CaptureRule> captures, IOnigCaptureIndex[] captureIndices) {
+    private void handleCaptures(final Grammar grammar, final OnigString lineText, final boolean isFirstLine,
+                                final StateStack stack, final LineTokens lineTokens, final List<@Nullable CaptureRule> captures,
+                                final OnigCaptureIndex[] captureIndices) {
         if (captures.isEmpty()) {
             return;
         }
 
-        int len = Math.min(captures.size(), captureIndices.length);
-        List<LocalStackElement> localStack = new ArrayList<LocalStackElement>();
-        int maxEnd = captureIndices[0].getEnd();
-        IOnigCaptureIndex captureIndex;
+        final var lineTextContent = lineText.content;
+
+        final int len = Math.min(captures.size(), captureIndices.length);
+        final var localStack = new ArrayDeque<LocalStackElement>();
+        final int maxEnd = captureIndices[0].end;
 
         for (int i = 0; i < len; i++) {
-            CaptureRule captureRule = captures.get(i);
+            final var captureRule = captures.get(i);
             if (captureRule == null) {
                 // Not interested
                 continue;
             }
 
-            captureIndex = captureIndices[i];
+            final var captureIndex = captureIndices[i];
 
             if (captureIndex.getLength() == 0) {
                 // Nothing really captured
                 continue;
             }
 
-            if (captureIndex.getStart() > maxEnd) {
+            if (captureIndex.start > maxEnd) {
                 // Capture going beyond consumed string
                 break;
             }
 
             // pop captures while needed
-            while (!localStack.isEmpty() && localStack.get(localStack.size() - 1).getEndPos() <= captureIndex.getStart()) {
+            while (!localStack.isEmpty() && localStack.getLast().endPos <= captureIndex.start) {
                 // pop!
-                lineTokens.produceFromScopes(localStack.get(localStack.size() - 1).getScopes(),
-                        localStack.get(localStack.size() - 1).getEndPos());
-                localStack.remove(localStack.size() - 1);
+                final var lastElem = localStack.removeLast();
+                lineTokens.produceFromScopes(lastElem.scopes, lastElem.endPos);
             }
 
             if (!localStack.isEmpty()) {
-                lineTokens.produceFromScopes(localStack.get(localStack.size() - 1).getScopes(),
-                        captureIndex.getStart());
+                lineTokens.produceFromScopes(localStack.getLast().scopes, captureIndex.start);
             } else {
-                lineTokens.produce(stack, captureIndex.getStart());
+                lineTokens.produce(stack, captureIndex.start);
             }
 
-            if (captureRule.retokenizeCapturedWithRuleId != null) {
+            final var retokenizeCapturedWithRuleId = captureRule.retokenizeCapturedWithRuleId;
+            if (retokenizeCapturedWithRuleId.notEquals(RuleId.NO_RULE)) {
                 // the capture requires additional matching
-                String scopeName = captureRule.getName(lineText.string, captureIndices);
-                ScopeListElement nameScopesList = stack.contentNameScopesList.push(grammar, scopeName);
-                String contentName = captureRule.getContentName(lineText.string, captureIndices);
-                ScopeListElement contentNameScopesList = nameScopesList.push(grammar, contentName);
+                final var scopeName = captureRule.getName(lineTextContent, captureIndices);
+                final var nameScopesList = stack.contentNameScopesList.pushAttributed(scopeName, grammar);
+                final var contentName = captureRule.getContentName(lineTextContent, captureIndices);
+                final var contentNameScopesList = nameScopesList.pushAttributed(contentName, grammar);
 
                 // the capture requires additional matching
-                StackElement stackClone = stack.push(captureRule.retokenizeCapturedWithRuleId, captureIndex.getStart(),
-                        null, nameScopesList, contentNameScopesList);
-                tokenizeString(grammar,
-                        GrammarHelper.createOnigString(lineText.string.substring(0, captureIndex.getEnd())),
-                        (isFirstLine && captureIndex.getStart() == 0), captureIndex.getStart(), stackClone, lineTokens);
+                final var stackClone = stack.push(retokenizeCapturedWithRuleId, captureIndex.start, -1, false, null,
+                        nameScopesList, contentNameScopesList);
+                final var onigSubStr = OnigString.of(lineTextContent.substring(0, captureIndex.end));
+                tokenizeString(grammar, onigSubStr, isFirstLine && captureIndex.start == 0,
+                        captureIndex.start, stackClone, lineTokens, false, Duration.ZERO /* no time limit */);
                 continue;
             }
 
-            // push
-            String captureRuleScopeName = captureRule.getName(lineText.string, captureIndices);
+            final var captureRuleScopeName = captureRule.getName(lineTextContent, captureIndices);
             if (captureRuleScopeName != null) {
                 // push
-                ScopeListElement base = localStack.isEmpty() ? stack.contentNameScopesList :
-                        localStack.get(localStack.size() - 1).getScopes();
-                ScopeListElement captureRuleScopesList = base.push(grammar, captureRuleScopeName);
-                localStack.add(new LocalStackElement(captureRuleScopesList, captureIndex.getEnd()));
+                final var base = localStack.isEmpty() ? stack.contentNameScopesList : localStack.getLast().scopes;
+                final var captureRuleScopesList = base.pushAttributed(captureRuleScopeName, grammar);
+                localStack.add(new LocalStackElement(captureRuleScopesList, captureIndex.end));
             }
         }
 
         while (!localStack.isEmpty()) {
             // pop!
-            lineTokens.produceFromScopes(localStack.get(localStack.size() - 1).getScopes(),
-                    localStack.get(localStack.size() - 1).getEndPos());
-            localStack.remove(localStack.size() - 1);
+            final var lastElem = localStack.removeLast();
+            lineTokens.produceFromScopes(lastElem.scopes, lastElem.endPos);
         }
     }
 
     /**
-     * Walk the stack from bottom to top, and check each while condition in this
-     * order. If any fails, cut off the entire stack above the failed while
-     * condition. While conditions may also advance the linePosition.
+     * Walk the stack from bottom to top, and check each while condition in this order.
+     * If any fails, cut off the entire stack above the failed while condition.
+     * While conditions may also advance the linePosition.
      */
-    private WhileCheckResult checkWhileConditions(Grammar grammar, OnigString lineText, boolean isFirstLine,
-                                                  int linePos, StackElement stack, LineTokens lineTokens) {
-        int currentanchorPosition = -1;
-        List<WhileStack> whileRules = new ArrayList<>();
-        for (StackElement node = stack; node != null; node = node.pop()) {
-            Rule nodeRule = node.getRule(grammar);
-            if (nodeRule instanceof BeginWhileRule) {
-                whileRules.add(new WhileStack(node, (BeginWhileRule) nodeRule));
+    private WhileCheckResult checkWhileConditions(final Grammar grammar, final OnigString lineText, boolean isFirstLine,
+                                                  int linePos, StateStack stack, final LineTokens lineTokens) {
+        int anchorPosition = stack.beginRuleCapturedEOL ? 0 : -1;
+
+        final class WhileStack {
+            final StateStack stack;
+            final BeginWhileRule rule;
+
+            WhileStack(final StateStack stack, final BeginWhileRule rule) {
+                this.stack = stack;
+                this.rule = rule;
             }
         }
+
+        final var whileRules = new ArrayList<WhileStack>();
+        for (StateStack node = stack; node != null; node = node.pop()) {
+            final Rule nodeRule = node.getRule(grammar);
+            if (nodeRule instanceof  BeginWhileRule) {
+                final var beginWhileRule = (BeginWhileRule) nodeRule;
+                whileRules.add(new WhileStack(node, beginWhileRule));
+            }
+        }
+
         for (int i = whileRules.size() - 1; i >= 0; i--) {
-            WhileStack whileRule = whileRules.get(i);
-            ICompiledRule ruleScanner = whileRule.rule.compileWhile(grammar, whileRule.stack.endRule, isFirstLine,
-                    currentanchorPosition == linePos);
-            IOnigNextMatchResult r = ruleScanner.scanner.findNextMatchSync(lineText, linePos);
-            // if (IN_DEBUG_MODE) {
-            // console.log(' scanning for while rule');
-            // console.log(debugCompiledRuleToString(ruleScanner));
-            // }
+            final var whileRule = whileRules.get(i);
+
+            final var ruleScanner = whileRule.rule.compileWhileAG(whileRule.stack.endRule, isFirstLine,
+                    anchorPosition == linePos);
+            final var r = ruleScanner.scanner.findNextMatchSync(lineText, linePos);
+            /*if (LOGGER.isLoggable(TRACE)) {
+                LOGGER.log(TRACE, "  scanning for while rule");
+                LOGGER.log(TRACE, debugCompiledRuleToString(ruleScanner));
+            }*/
 
             if (r != null) {
-                Integer matchedRuleId = ruleScanner.rules[r.getIndex()];
-                if (matchedRuleId != -2) {
+                final RuleId matchedRuleId = ruleScanner.rules[r.getIndex()];
+                if (RuleId.WHILE_RULE.notEquals(matchedRuleId)) {
                     // we shouldn't end up here
-                    stack = whileRule.stack.pop();
+                    stack = castNonNull(whileRule.stack.pop());
                     break;
                 }
-                if (r.getCaptureIndices() != null && r.getCaptureIndices().length > 0) {
-                    lineTokens.produce(whileRule.stack, r.getCaptureIndices()[0].getStart());
+                if (r.getCaptureIndices().length > 0) {
+                    lineTokens.produce(whileRule.stack, r.getCaptureIndices()[0].start);
                     handleCaptures(grammar, lineText, isFirstLine, whileRule.stack, lineTokens,
                             whileRule.rule.whileCaptures, r.getCaptureIndices());
-                    lineTokens.produce(whileRule.stack, r.getCaptureIndices()[0].getEnd());
-                    currentanchorPosition = r.getCaptureIndices()[0].getEnd();
-                    if (r.getCaptureIndices()[0].getEnd() > linePos) {
-                        linePos = r.getCaptureIndices()[0].getEnd();
+                    lineTokens.produce(whileRule.stack, r.getCaptureIndices()[0].end);
+                    anchorPosition = r.getCaptureIndices()[0].end;
+                    if (r.getCaptureIndices()[0].end > linePos) {
+                        linePos = r.getCaptureIndices()[0].end;
                         isFirstLine = false;
                     }
                 }
             } else {
-                stack = whileRule.stack.pop();
+                stack = castNonNull(whileRule.stack.pop());
                 break;
             }
         }
 
-        return new WhileCheckResult(stack, linePos, currentanchorPosition, isFirstLine);
+        return new WhileCheckResult(stack, linePos, anchorPosition, isFirstLine);
     }
 
-    class WhileStack {
-
-        public final StackElement stack;
-        public final BeginWhileRule rule;
-
-        public WhileStack(StackElement stack, BeginWhileRule rule) {
-            this.stack = stack;
-            this.rule = rule;
-        }
+    static TokenizeStringResult tokenizeString(final Grammar grammar, final OnigString lineText,
+                                               final boolean isFirstLine,
+                                               final int linePos, final StateStack stack, final LineTokens lineTokens,
+                                               final boolean checkWhileConditions, final Duration timeLimit) {
+        return new LineTokenizer(grammar, lineText, isFirstLine, linePos, stack, lineTokens)
+                .scan(checkWhileConditions, timeLimit.toMillis());
     }
 
-    class WhileCheckResult {
-
-        public final StackElement stack;
-        public final int linePos;
-        public final int anchorPosition;
-        public final boolean isFirstLine;
-
-        public WhileCheckResult(StackElement stack, int linePos, int anchorPosition, boolean isFirstLine) {
-            this.stack = stack;
-            this.linePos = linePos;
-            this.anchorPosition = anchorPosition;
-            this.isFirstLine = isFirstLine;
+    static String debugCompiledRuleToString(final CompiledRule ruleScanner) {
+        final var r = new ArrayList<String>();
+        for (int i = 0, l = ruleScanner.rules.length; i < l; i++) {
+            r.add("   - " + ruleScanner.rules[i] + ": " + ruleScanner.debugRegExps.get(i));
         }
+        return String.join(System.lineSeparator(), r);
     }
 }
